    before passing it to pandoc. This caused problems on certain pages
    (e.g. http://daringfireball.com/markdown) which have well-formed
    XHTML that causes tidy to choke. The solution is to pipe through
    tidy only if pandoc cannot parse the input by itself. This means
    that a temp file is now always used, even when input comes from a
    local file or standard input.

  * Fixed MacPorts Portfile:

    + Modified to install the pandoc library in addition to programs.  
    + Installation must be done manually rather than using Makefile's
      install-all.
    + Note that the library must be registered in the activate phase,
      after the library files have been copied out of the destroot.
      Cabal generates a 'register.sh' script that will do this.

  * debian/control: Added libghc6-network-dev, libghc6-xhtml-dev, and
    libghc6-mtl-dev as dependencies for libghc6-pandoc-dev.
    Closes: #445235

  * Changed pandoc home page to http://johnmacfarlane.net/pandoc/.

  [ Recai Oktaş ]

  * Makefile: fix the issue of having two copies of the library documentation
    under some usage scenarios.

 -- Recai Oktaş <roktas@debian.org>  Sun, 07 Oct 2007 20:51:43 +0300

pandoc (0.44) unstable; urgency=low

  [ John MacFarlane ]

  * Fixed bug in HTML writer:  when --toc was used, anchors were put around
    headers, which is invalid XHTML (block content within inline element).
    Now the anchors are put inside the header tags.  Resolves Issue #23.

  * Added xmlns attribute to html element in html writer tests.
    This attribute is added by more recent versions of the
    xhtml library (>= 3000), and is required for valid XHTML.

  [ Recai Oktaş ]

  * On configure, compile 'Setup.hs' to 'setup' and use 'setup' as the build
    command instead of 'runhaskell', which, on some platforms (such as s390,
    alpha, m68k), throws the following error:

        runhaskell Setup.hs configure --prefix=/usr
        ghc-6.6.1: not built for interactive use
