@@ -42,9 +42,6 @@ import Data.List ( isPrefixOf )
 import Data.Char ( toLower )
 import Control.Monad ( (>>=) )
 
-version :: String
-version = "0.45"
-
 copyrightMessage :: String
 copyrightMessage = "\nCopyright (C) 2006-7 John MacFarlane\n\
                     \Web:  http://johnmacfarlane.net/pandoc\n\
@@ -298,7 +295,7 @@ options =
                  (NoArg
                   (\_ -> do
                      prg <- getProgName
-                     hPutStrLn stderr (prg ++ " " ++ version ++ 
+                     hPutStrLn stderr (prg ++ " " ++ pandocVersion ++ 
                                        copyrightMessage)
                      exitWith $ ExitFailure 4))
                  "" -- "Print version"
